# quickcheck-classes-lattices

./: Lib.html  Test-QuickCheck-Classes-Algebra-PartialOrd.html  cabal.project  doc-index.html  doc-index.json  index.html  quickcheck-classes-lattices.cabal  quickcheck-classes-lattices.haddock  quickcheck-lattices.cabal  quickcheck-lattices.haddock
.github/workflows/: build.yml
src/: Lib.html  Test.QuickCheck.Classes.Algebra.PartialOrd.html
src/internal/Test/QuickCheck/Classes/Semigroup/: Internal.hs  Tuple.hs
src/public/Test/QuickCheck/Classes/Algebra/: PartialOrd.hs
src/test/Test/QuickCheck/Classes/: AlgebraSpec.hs
