cabal-version:  3.0
name:           quickcheck-lattices
version:        0.0.0
bug-reports:    https://github.com/jonathanknowles/quickcheck-lattices/issues
license:        Apache-2.0
license-file:   LICENSE
author:         Jonathan Knowles
maintainer:     mail@jonathanknowles.net
copyright:      2022 Jonathan Knowles
category:       Testing
synopsis:       QuickCheck support for testing instances of classes defined in
                the lattices library.
description:

    This library provides:

    * QuickCheck support for testing instances of classes defined in the
      'lattices' library.
    * Reusable properties in the form of 'Laws' definitions.

extra-source-files:
    README.md

common common-extensions
    default-extensions:
        DerivingStrategies
        FlexibleContexts
        FlexibleInstances
        GeneralizedNewtypeDeriving
        LambdaCase
        MultiParamTypeClasses
        ScopedTypeVariables
        TupleSections
        TypeApplications
        TypeFamilies
        TypeOperators
        ViewPatterns

source-repository head
    type: git
    location: https://github.com/jonathanknowles/quickcheck-lattices

library
    import:
        common-extensions
    hs-source-dirs:
        src/public
    exposed-modules:
        Test.QuickCheck.Classes.Algebra.PartialOrd
    default-language:
        Haskell2010
    build-depends:
      , base >=4.7 && <5
      , lattices
      , QuickCheck
      , quickcheck-classes
      , quickcheck-lattices:internal

library examples
    import:
        common-extensions
    hs-source-dirs:
        src/examples
    exposed-modules:
    default-language:
        Haskell2010
    build-depends:
      , base >=4.7 && <5
      , quickcheck-lattices

library internal
    import:
        common-extensions
    hs-source-dirs:
        src/internal
    exposed-modules:
        Data.Semigroup.Eq
        Test.QuickCheck.Classes.Semigroup.Internal
        Test.QuickCheck.Classes.Semigroup.Tuple
    default-language:
        Haskell2010
    build-depends:
      , base >=4.7 && <5
      , pretty-show
      , QuickCheck
      , semigroupoids

test-suite test
    import:
        common-extensions
    main-is:
        Spec.hs
    hs-source-dirs:
        src/test
    other-modules:
        Test.QuickCheck.Classes.AlgebraSpec
        Test.QuickCheck.Classes.Hspec
    type: exitcode-stdio-1.0
    default-language:
        Haskell2010
    build-tool-depends:
        hspec-discover:hspec-discover ==2.*
    build-depends:
      , base >=4.7 && <5
      , containers
      , hspec
      , QuickCheck
      , quickcheck-classes
      , quickcheck-lattices
      , quickcheck-lattices:internal

benchmark benchmark
    default-language:
        Haskell2010
    type:
        exitcode-stdio-1.0
    hs-source-dirs:
        src/benchmark
    main-is:
        Main.hs
    ghc-options:
        -O2
    build-depends:
      , base >=4.7 && <5
      , quickcheck-lattices:internal
      , tasty-bench
      , tasty-hunit
